<resources>
    <string name="app_name">Livebus GIETU</string>
    <string name="get_started_with_livebus">Get Started With Livebus</string>
    <string name="web_client_id">340465684084-1sb7q3ijk907mjvjsq39gblua3f8acbb.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_bus">TRACK BUS</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="devteam">DevTeam</string>
    <string name="anshuman_mahanta">Anshuman Mahanta</string>
    <string name="ui_ux_amp_aiml_lead"><![CDATA[UI/UX & AIML Lead]]></string>
    <string name="sourav_kumar_pati">Sourav Kumar Pati</string>
    <string name="mukesh_bala">Mukesh Bala</string>
    <string name="systems_design">Systems Design</string>
    <string name="app_amp_iot_developer"><![CDATA[App & IoT Developer]]></string>
    <string name="livebus">Livebus</string>
    <string name="_91">+91</string>
    <string name="by_gietu">By GIETU</string>
    <string name="mobile_number">Mobile number</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="by_proceeding_you_consent_top_receiving_message_including_by_automated_means_from_livebus_and_its_affiliates_to_the_number_provided">By proceeding, you consent top receiving message, including by automated means, from Livebus and its affiliates to the number provided.</string>
    <string name="upload_image">upload image</string>
    <string name="bug_report">Bug Report</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="describe_the_bug">Describe the bug</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="write_text_here">Write text here</string>
    <string name="submit">Submit</string>
    <string name="upload_screensort">Upload Screensort:</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to_you">Enter the OTP sent to you</string>
    <string name="please_enter_the_correct_otp">Please enter the correct OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="looking_for_bus_location">Looking for Bus Location</string>
    <string name="not_started">Not Started</string>
    <string name="no_8">No:8</string>
    <string name="km_h">km/h</string>
    <string name="the_estimated_time_of_arrival_eta_is_calculated_using_predictive_models_and_may_vary_due_to_traffic_road_conditions_or_other_unforeseen_factors_please_use_it_as_a_helpful_estimate_rather_than_an_exact_time">The Estimated Time of Arrival (ETA) is calculated using predictive models and may vary due to traffic, road conditions, or other unforeseen factors. Please use it as a helpful estimate rather than an exact time.</string>
    <string name="choose_image">Choose Image</string>
    <string name="enter_email">Enter Email</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="last_location">Last Location</string>
    <string name="jj">JJ</string>
    <string name="next_location">Next Location</string>
    <string name="balaram_nagar">Balaram Nagar</string>
    <string name="eta_to_next_location">ETA to Next Location</string>
    <string name="_12m">12m</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="report_bug">Report Bug</string>
    <string name="share_app">Share App</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="stop_name">Stop Name</string>
    <string name="eta_12_10_pm">ETA-12:10 PM</string>
    <string name="hello_student">Hello, Student!</string>
    <string name="welcome_to_the_livebus_gietu">Welcome to the Livebus GIETU.</string>
    <string name="live_bus">Live Bus</string>
    <string name="on_time">On Time</string>
    <string name="bus_8">Bus 8</string>
    <string name="bus_icon">Bus Icon</string>
    <string name="calculating">Calculating...</string>
    <string name="track_now">Track Now</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="view_schedule">View Schedule</string>
    <string name="announcements_icon">Announcements Icon</string>
    <string name="announcements">Announcements</string>
    <string name="by_downloading_installing_or_using_the_livebus_gietu_application_the_service_you_agree_to_be_bound_by_these_terms_and_conditions_if_you_do_not_agree_to_these_terms_please_do_not_use_the_service_these_terms_are_a_legal_agreement_between_you_and_team_hydra">By downloading, installing, or using the Livebus GIETU application (the \'Service\'), you agree to be bound by these Terms and Conditions. If you do not agree to these terms, please do not use the Service. These terms are a legal agreement between you and Team Hydra.</string>
    <string name="last_updated_29_august_2025">Last Updated: 29 August 2025</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="_1_acceptance_of_terms">1. Acceptance of Terms</string>
    <string name="_2_use_of_the_service">2. Use of the Service</string>
    <string name="livebus_gietu_provides_real_time_bus_tracking_information_for_students_of_g_i_e_t_university_the_service_is_provided_for_personal_non_commercial_use_only_you_agree_not_to_use_the_service_for_any_unlawful_purpose_or_in_a_way_that_could_harm_the_service_or_its_users">Livebus GIETU provides real-time bus tracking information for students of G.I.E.T. University. The service is provided for personal, non-commercial use only. You agree not to use the service for any unlawful purpose or in a way that could harm the service or its users.</string>
    <string name="_3_user_accounts">3. User Accounts</string>
    <string name="_4_user_conduct">4. User Conduct</string>
    <string name="you_agree_not_to_misuse_the_service_this_includes_but_is_not_limited_to_attempting_to_interfere_with_the_proper_functioning_of_the_app_reverse_engineering_the_app_or_using_the_tracking_data_for_any_purpose_other_than_personal_convenience_related_to_university_transport">You agree not to misuse the Service. This includes, but is not limited to, attempting to interfere with the proper functioning of the app, reverse-engineering the app, or using the tracking data for any purpose other than personal convenience related to university transport.</string>
    <string name="to_access_the_service_you_must_register_for_an_account_using_google_sign_in_or_another_provided_method_you_are_responsible_for_maintaining_the_confidentiality_of_your_account_information_and_for_all_activities_that_occur_under_your_account_you_agree_to_notify_us_immediately_of_any_unauthorized_use">To access the Service, you must register for an account using Google Sign-In or another provided method. You are responsible for maintaining the confidentiality of your account information and for all activities that occur under your account. You agree to notify us immediately of any unauthorized use.</string>
    <string name="_5_disclaimers_and_limitation_of_liability">5. Disclaimers and Limitation of Liability</string>
    <string name="_6_termination">6. Termination</string>
    <string name="we_may_terminate_or_suspend_your_access_to_the_service_at_any_time_without_prior_notice_or_liability_for_any_reason_including_if_you_breach_these_terms_and_conditions_upon_termination_your_right_to_use_the_service_will_immediately_cease">We may terminate or suspend your access to the Service at any time, without prior notice or liability, for any reason, including if you breach these Terms and Conditions. Upon termination, your right to use the Service will immediately cease.</string>
    <string name="_7_contact_information">7. Contact Information</string>
    <string name="the_service_is_provided_as_is_without_any_warranties_while_we_strive_for_accuracy_real_time_tracking_data_may_be_subject_to_delays_or_inaccuracies_due_to_network_connectivity_or_gps_signal_issues_team_hydra_is_not_liable_for_any_damages_or_losses_resulting_from_your_use_of_the_service_including_any_inconvenience_caused_by_inaccurate_tracking_information">The Service is provided \'as is\' without any warranties. While we strive for accuracy, real-time tracking data may be subject to delays or inaccuracies due to network connectivity or GPS signal issues. Team Hydra is not liable for any damages or losses resulting from your use of the Service, including any inconvenience caused by inaccurate tracking information.</string>
    <string name="for_any_questions_or_concerns_regarding_these_terms_and_conditions_please_contact_us_at_souravpati42_gmail_com">For any questions or concerns regarding these Terms and Conditions, please contact us at: souravpati42@gmail.com</string>
    <string name="recenter_map">Recenter Map</string>
    <string name="all_buses">All Buses</string>
    <string name="live_bus_tracker">Live Bus Tracker</string>
    <string name="real_time_monitoring">Real-time monitoring</string>
    <string name="bus08">BUS08</string>
    <string name="lora_tracker">LoRa Tracker</string>
    <string name="connected">Connected</string>
    <string name="speed">Speed</string>
    <string name="current_route">Current Route</string>
    <string name="current_stop">Current Stop</string>
    <string name="market_square">Market Square</string>
    <string name="next_stop">Next Stop</string>
    <string name="fuel_level">Fuel Level</string>
    <string name="_68">68%</string>
    <string name="coordinates">Coordinates</string>
    <string name="system_alert">System Alert</string>
    <string name="all_systems_operational_no_issues_detected">All systems operational. No issues detected.</string>
    <string name="gps">gps</string>
    <string name="alert_icon">alert icon</string>
</resources>